# PhysicsBoxes

./: CMakeLists.txt  README.md
src/: box.cpp  box.hpp  main.cpp
